# pydantic-ai-study

./: agent.py  chat_app.py  hello.py  pyproject.toml
